--- a/src/App.css
+++ b/src/App.css
@@ -73,7 +73,7 @@ body {
 }
 
 .hero {
-  background-image: url('../img/bank-tree.jpeg');
+  background-image: url('/src/assets/img/bank-tree.jpeg');
   background-position: 0 -50px;
   background-size: cover;
   background-repeat: no-repeat;
@@ -153,6 +153,42 @@ body {
   font-size: 1.25rem;
   font-weight: bold;
   margin-bottom: 0.5rem;
+}
+
+.edit-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 2rem auto;
+  padding: 1rem;
+  width: fit-content;
+}
+
+.edit-form .input-wrapper {
+  flex-direction: row;
+  align-items: center;
+  gap: 1rem;
+  position: relative;
+  left: 15px;
+font-size: 0.9rem;
+}
+
+.edit-form .input-wrapper label {
+  font-weight: normal;
+}
+
+.edit-form .input-wrapper input {
+  width: 130px;
+}
+
+.edit-form .btn-wrapper {
+  margin-top: 1rem;
+  display: flex;
+  gap: 0.5rem;
+}
+
+.edit-form .btn-wrapper button {
+  width: 150px;
 }
 
 .sign-in-button {
