Mise à jour de l'image de fond du héros

--- a/src/App.css
+++ b/src/App.css
@@ -73,7 +73,7 @@ body {
 }
 
 .hero {
-  background-image: url('/src/assets/img/tablet-bank-tree.webp');
+  background-image: url('/src/assets/img/mobile-bank-tree.webp');
   background-position: 0 -50px;
   background-size: cover;
   background-repeat: no-repeat;
@@ -102,12 +102,18 @@ body {
   font-size: 0.9rem;
 }
 
+@media (min-width: 430px) {
+  .hero {
+    background-image: url('/src/assets/img/tablet-bank-tree.webp');
+  }
+}
 @media (min-width: 920px) {
   .hero {
     background-image: url('/src/assets/img/desktop-bank-tree.webp');
     height: 400px;
     background-position: 0% 33%;
   }
+
 
   .hero-content {
     position: absolute;
